5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1582_996.log
== TEST (2019-03-12 17:36:27) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("*_ _ _*")
print("***** ")
-- OUTPUT:
*****
* o o *
* ^ *
*_ _ _*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:52) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* _ _ _ *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:26) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* _ _ _ *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:35) 
-- CODE:
print(" ***** ")
print("* o o *")
print("* ^ *")
print("* _ _ _ *")
print("*****")
-- OUTPUT:
***** 
* o o *
* ^ *
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:45) 
-- CODE:
print(" ***** ")
print("* o o *")
print("* ^ *")
print("* _ _ _ *")
print(" ***** ")
-- OUTPUT:
***** 
* o o *
* ^ *
* _ _ _ *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:23) 
-- CODE:
print(" ***** ")
print("* o o *")
print("* ^ *")
print("*  _ _ _  *")
print("*****")
-- OUTPUT:
***** 
* o o *
* ^ *
*  _ _ _  *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:51) 
-- CODE:
print(" ***** ")
print("* o o *")
print("* ^ *")
print("*_ _ _*")
print("*****")
-- OUTPUT:
***** 
* o o *
* ^ *
*_ _ _*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:41) 
-- CODE:
print(" ***** ")
print("* o o *")
print("* ^ *")
print("* - - - *")
print("*****")
-- OUTPUT:
***** 
* o o *
* ^ *
* - - - *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:02) 
-- CODE:
print(" ***** ")
print("* o o *")
print("* ^ *")
print("*- - -*")
print("*****")
-- OUTPUT:
***** 
* o o *
* ^ *
*- - -*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:11) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("*- - -*")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
*- - -*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:36) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* - - - *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* - - - *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:33) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* - - -*")
print("***** ")
-- OUTPUT:
*****
* o o *
* ^ *
* - - -*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:29) 
-- CODE:
print(*****)
print(* o o *)
print(* ^ *)
print(*- - -*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:36) 
-- CODE:
print(*****)
print(* o o *)
print(* ^ *)
print(*- - -*)
print(*****)
-- EXECUTION TIME:
0.188725
-- ERROR:
  File "/home/codebench/codes/1582/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:39) 
-- CODE:
print(*****)
print(* o o *)
print(* ^ *)
print(*- - -*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:45:29) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("*- - -*")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
*- - -*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:13) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* - - - *")
print(" ***** ")
-- OUTPUT:
***** 
* o o *
*  ^  *
* - - - *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:03) 
-- CODE:
print(" ***** ")
print(" * o o * ")
print("*  ^  *")
print("* - - - *")
print(" ***** ")
-- OUTPUT:
***** 
 * o o * 
*  ^  *
* - - - *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:51:49) 
-- CODE:
print("  *****  ")
print(" * o o * ")
print(" *  ^ *  ")
print("* --- *  ")
print("  *****  ")
-- OUTPUT:
*****  
 * o o * 
 *  ^ *  
* --- *  
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:53:42) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print("  * ^ * " )
print(" * --- * ")
print("  *****  ")
-- OUTPUT:
*****  
(* o o *)
  * ^ * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:54:11) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print("  * ^ * " )
print(" * --- * ")
print("  *****  ")
-- OUTPUT:
*****  
(* o o *)
  * ^ * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:07:25) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print("  * ^ * " )
print(" * --- * ")
print("  *****  ")
-- OUTPUT:
*****  
(* o o *)
  * ^ * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:10:09) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- * ")
print("  *****  ")
-- OUTPUT:
*****  
(* o o *)
 *  ^  * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:10:11) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- * ")
print("  *****  ")
-- EXECUTION TIME:
0.160132
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
(* o o *)
 *  ^  * 
 * --- * 
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
